# vindicta

./: .env.example  .gitignore  .vindicta_codex_prompt_1778759119200.txt  AGENT.md  CLAUDE.md  DESIGN.md  README.md  TODO.md  package.json  pnpm-lock.yaml  vindicta.json
.claude/: settings.local.json
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-release.yml
apps/api/: .env.example  package.json  schema.sql  wrangler.toml
apps/api/src/: app.module.ts  index.ts  main.ts  types.ts
apps/api/src/auth/: auth.module.ts
apps/api/src/middleware/: rateLimit.ts
apps/api/src/projects/: project.entity.ts  projects.module.ts
apps/api/src/roles/: role.entity.ts  roles.module.ts
apps/api/src/routes/: beta.ts  download.ts
apps/desktop/: nuxt.config.ts  package.json  tailwind.config.ts
apps/desktop/app/: app.vue
apps/desktop/tauri/: .env.sample  .gitignore  Cargo.toml  build.rs  tauri.conf.json
apps/desktop/tauri/capabilities/: default.json
apps/desktop/tauri/course-bin/: day-1.va  day-10.va  day-11.va  day-12.va  day-13.va  day-14.va  day-15.va  day-16.va  day-17.va  day-18.va  day-19.va  day-2.va  day-20.va  day-21.va  day-22.va  day-23.va  day-24.va  day-25.va  day-26.va  day-27.va  day-28.va  day-29.va  day-3.va  day-30.va  day-31.va  day-32.va  day-33.va  day-34.va  day-35.va  day-36.va  day-37.va  day-38.va  day-39.va  day-4.va  day-40.va  day-5.va  day-6.va  day-7.va  day-8.va  day-9.va  (+4 more)
apps/desktop/tauri/src/: lib.rs  main.rs
apps/landing/: nuxt.config.ts  package.json
schema/: v7.json  v8.json
(+146 files in other folders)
