[package]
name = "vindicta"
version = "0.1.0"
description = "Vindicta — vibe-coded project management"
authors = ["surelle-ha"]
edition = "2021"

[package.metadata.tauri]
windows-resource = true

[lib]
name = "vindicta_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "vindicta"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
